# barista-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md
.github/workflows/: sync-jimmy-recipes.yml
data/: cupping.json  flavor_diagnosis.json  flavor_wheel.json  grinder.json  jimmy_craft_recipes.example_import.json  jimmy_craft_recipes.json  jimmy_craft_recipes.schema.json  jimmy_sync_config.example.json  jimmy_transcripts.json  learning_resources.json  mantras.json  milk_drinks.json  online_craft_recipes.json  parameters_origin.json  parameters_process.json  parameters_roast.json  recipes.json  sensory.json  version.json
docs/: _release_v2.9.0.md  jimmy-recipe-sync.md
mcp-server/: README.md  agent.py  local_app.py  pyproject.toml  server.py  test_agent.py  test_data_consistency.py  test_server.py
references/: beans.md  champion-brewing.md  craft-coffee.md  cupping.md  equipment-profiles.md  eval-cases.md  example-dialogues.md  glossary.md  grind-calibration.md  human-voice-rules.md  learning-resources.md  parameters-guide.md  pressure-profiles.md  recipes-baseline.md  search-queries.md  sensory.md  troubleshooting.md  water-quality.md
references/en/: README.md  beans.md  champion-brewing.md  craft-coffee.md  cupping.md  equipment-profiles.md  grind-calibration.md  learning-resources.md  parameters-guide.md  pressure-profiles.md  recipes-baseline.md  sensory.md  troubleshooting.md  water-quality.md
references/report_templates/: README.md  cupping_scorecard.md  diagnosis_sheet.md  grinder_calibration.md  recipe_card.md
scripts/: self_check.py  sync_jimmy_recipes.py
