[project]
name = "barista-mcp-server"
version = "2.6.0"
description = "Barista Skill MCP Server - bilingual (zh/en) coffee-coach MCP service"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.scripts]
barista-mcp = "server:main"
[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
py-modules = ["server"]
